--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: 'Helvetica', 'Arial', sans-serif;
             overflow: hidden;
         }
-        #gedcomFileContainer {
+        #controls {
             position: absolute;
             top: 10px;
             left: 10px;
@@ -33,6 +33,13 @@
         #gedcomFile {
             display: none;
         }
+        #searchBox {
+            padding: 10px;
+            font-size: 16px;
+            margin-left: 20px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
         svg {
             width: 100vw;
             height: 100vh;
@@ -43,9 +50,10 @@
     </style>
 </head>
 <body>
-    <div id="gedcomFileContainer">
+    <div id="controls">
         <label for="gedcomFile" id="gedcomFileLabel">Choose File</label>
         <input type="file" id="gedcomFile">
+        <input type="text" id="searchBox" placeholder="Search..." oninput="searchGraph()">
     </div>
     <svg></svg>
     <script src="https://d3js.org/d3.v6.min.js"></script>
