--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GEDCOM Graph</title>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <style>
         body {
             margin: 0;
@@ -18,10 +20,10 @@
         }
         #treeView {
             position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 200px;
-            height: 90vh;
+            top: 48px;
+            left: 8px;
+            width: 250px;
+            height: 85vh;
             overflow-y: auto;
             background: #fff;
             border: 1px solid #ccc;
@@ -31,14 +33,20 @@
         }
         #toggleTreeView {
             position: absolute;
-            top: 10px;
-            left: 220px;
+            top: 8px;
+            left: 8px;
             z-index: 10;
             padding: 10px;
             cursor: pointer;
             background-color: #6200ea;
             color: white;
             border-radius: 4px;
+            font-family: 'Helvetica', 'Arial', sans-serif;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        #toggleTreeView:hover {
+            background-color: #3700b3;
         }
         #gedcomFileLabel {
             display: inline-block;
@@ -71,13 +79,31 @@
         .node text {
             font: 12px sans-serif;
         }
+        ul {
+            list-style-type: none;
+            padding-left: 20px;
+        }
+        ul ul {
+            padding-left: 20px;
+        }
+        li {
+            padding: 4px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #6200ea;
+            transition: color 0.3s;
+        }
+        a:hover {
+            color: #3700b3;
+        }
     </style>
 </head>
 <body>
-    <div id="treeView"></div>
     <div id="toggleTreeView" onclick="toggleTree()">Show Files</div>
+    <div id="treeView"></div>
     <div id="controls">
-        <label for="gedcomFile" id="gedcomFileLabel">Choose File</label>
+        <label for="gedcomFile" id="gedcomFileLabel">Choose Custom .GED</label>
         <input type="file" id="gedcomFile">
         <input type="text" id="searchBox" placeholder="Search..." oninput="searchGraph()">
     </div>
