--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
             margin: 0;
             font-family: 'Helvetica', 'Arial', sans-serif;
             overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Ensure the body takes up the full height of the viewport */
         }
         #controls {
             position: absolute;
@@ -20,16 +24,16 @@
         }
         #treeView {
             position: absolute;
-            top: 48px;
+            top: 40px; /* Adjust to be below the button */
             left: 8px;
             width: 250px;
-            height: 85vh;
+            height: 90vh;
             overflow-y: auto;
             background: #fff;
             border: 1px solid #ccc;
             z-index: 10;
             padding: 10px;
-            display: none;
+            display: none; /* Initially hidden */
         }
         #toggleTreeView {
             position: absolute;
@@ -73,8 +77,10 @@
             border: 1px solid #ccc;
         }
         svg {
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
+            display: block;
+            background-color: #f9f9f9; /* Optional: background color for the SVG */
         }
         .node text {
             font: 12px sans-serif;
@@ -100,14 +106,14 @@
     </style>
 </head>
 <body>
-    <div id="toggleTreeView" onclick="toggleTree()">Show Files</div>
     <div id="treeView"></div>
+    <div id="toggleTreeView" onclick="toggleTree()">Show Files</div>
     <div id="controls">
         <label for="gedcomFile" id="gedcomFileLabel">Choose Custom .GED</label>
         <input type="file" id="gedcomFile">
         <input type="text" id="searchBox" placeholder="Search..." oninput="searchGraph()">
     </div>
-    <svg></svg>
+    <svg viewBox="-200 -200 800 800"></svg>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="graph.js"></script>
     <script>
@@ -171,10 +177,10 @@
             try {
                 const response = await fetch(`http://localhost:3000/ged/${fileName}`);
                 const gedcomData = await response.text();
-                const parsedData = parseGedcom(gedcomData);
+                const parsedData = window.parseGedcom(gedcomData); // Ensure global scope
                 allNodes = parsedData.nodes;
                 allLinks = parsedData.links;
-                createGraph(parsedData);
+                window.createGraph(parsedData); // Ensure global scope
             } catch (error) {
                 console.error('Error loading file:', error);
             }
