Changing URLs again

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
     <div id="treeView"></div>
     <div id="toggleTreeView" onclick="toggleTree()">Show Graphs</div>
     <div id="controls">
-        <a id="readMeButton" href="https://juansero29.github.io/gedcom_character_map_graphs/README.md" target="_blank">
+        <a id="readMeButton" href="https://juansero29.github.io/gedcom_character_map_graphs/" target="_blank">
             <i class="fab fa-github"></i> READ ME
         </a>
         <label for="gedcomFile" id="gedcomFileLabel">Choose Custom .GED</label>
