--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GEDCOM Graph</title>
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
+    />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <style>
@@ -36,9 +39,10 @@
             border: 1px solid #ccc;
             z-index: 10;
             padding: 10px;
-            display: none;
+            display: none; /* Initially hidden */
         }
         #toggleTreeView {
+            display: none; /* Initially hidden */
             position: absolute;
             top: 8px;
             left: 8px;
@@ -111,14 +115,19 @@
 </head>
 <body>
     <div id="treeView"></div>
-    <div id="toggleTreeView" onclick="toggleTree()">Show Graphs</div>
+    <div id="toggleTreeView" onclick="toggleTree()">Show Files</div>
     <div id="controls">
-        <a id="readMeButton" href="https://github.com/Juansero29/gedcom_character_map_graphs/blob/main/README.md" target="_blank">
+        <a id="readMeButton" href="https://github.com/Juansero29/gedcom_character_map_graphs" target="_blank">
             <i class="fab fa-github"></i> READ ME
         </a>
         <label for="gedcomFile" id="gedcomFileLabel">Choose Custom .GED</label>
         <input type="file" id="gedcomFile" />
-        <input type="text" id="searchBox" placeholder="Search..." oninput="searchGraph()" />
+        <input
+          type="text"
+          id="searchBox"
+          placeholder="Search..."
+          oninput="searchGraph()"
+        />
     </div>
     <svg viewBox="-200 -200 800 800"></svg>
     <script src="https://d3js.org/d3.v6.min.js"></script>
@@ -128,7 +137,10 @@
             try {
                 const response = await fetch("http://localhost:3000/ged");
                 const files = await response.json();
-                displayFiles(files);
+                if (files.length > 0) {
+                    displayFiles(files);
+                    document.getElementById("toggleTreeView").style.display = "block"; // Show button if files are fetched
+                }
             } catch (error) {
                 console.error("Error fetching files:", error);
             }
@@ -174,10 +186,10 @@
             const toggleButton = document.getElementById("toggleTreeView");
             if (treeView.style.display === "none") {
                 treeView.style.display = "block";
-                toggleButton.textContent = "Hide";
+                toggleButton.textContent = "Hide Files";
             } else {
                 treeView.style.display = "none";
-                toggleButton.textContent = "Show Graphs";
+                toggleButton.textContent = "Show Files";
             }
         }
 
